# task_list_api

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.local.yaml  docker-compose.test.yaml  docker-compose.yaml  docker.sh  pyproject.toml
.github/workflows/: lint.yml  test.yml
alembic/: env.py
alembic/versions/: 20240619084805_3b76a118324b_add_tasks_table.py  20240708055006_fbaa567d433e_add_users_table.py
src/: config.py  main.py
src/controllers/: __init__.py  base_controller.py  controller_task.py  controller_user.py
src/core/: auth.py  config.py  decorators.py  docs.py  error_msg.py  exception_handlers.py  exceptions.py  jwt_utils.py
src/core/db/: base.py  base_class.py  session.py
src/db/: base.py  session.py
src/models/: __init__.py  task.py  user.py
src/resources/: error_msg.py  exceptions.py
src/routers/: api.py  router_task.py
src/routers/endpoints/: task.py  user.py
src/schemas/: __init__.py  auth.py  response.py  task.py  user.py
tests/: conftest.py  test_auth.py
tests/test_api/: test_task.py  test_user.py
tests/utils/: dummy_data_generator.py  util.py
tests/utils/dummy_data/: __init__.py  task_data.py  user_data.py
